# socks-router

./: .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  README.md  build.rs  devbox.json  example-routes.yaml
src/: cli.rs  command.rs  lib.rs  main.rs  router.rs  server.rs  socks5.rs  stats.rs
src/router/: route.rs  route_cache.rs  route_config.rs  router.rs
src/server/: http.rs  server.rs  socks5.rs  transfer_data.rs  udp.rs  utils.rs
src/socks5/: http.rs  server.rs  udp.rs
