[package]
name = "socks-router"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
fast-socks5 = "1.0.0-rc.0"
tokio = { version = "1.44.0", features = ["full"] }
env_logger = "0.11.6"
anyhow = "1.0.97"
log = "0.4.26"
url = "2.5.4"
serde = { version = "1.0.218", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
serde_regex = "1.1.0"
ipnetwork = "0.21.1"
regex = "1.11.1"
time = "0.3.39"
notify = "8.0.0"

[build-dependencies]
chrono = "0.4.39"
